--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 parameters:
     run_workflow_deploy:
         type: boolean
-        default: true
+        default: false
 
     run_build_armhf_stretch:
         type: boolean
@@ -55,12 +55,15 @@ parameters:
         type: boolean
         default: true
 
+orbs:
+    cloudsmith: cloudsmith/cloudsmith@1.0.4
+
 jobs:
     build-armhf-stretch:
         machine: true
         environment:
         - OCPN_TARGET=stretch-armhf
-        - DOCKER_IMAGE=jongough/raspbian-stretch:latest
+        - DOCKER_IMAGE=balenalib/raspberry-pi-debian:stretch
         - BUILD_FLAGS=-j3
         - BUILD_ENV=raspbian
         steps:
@@ -77,7 +80,7 @@ jobs:
         machine: true
         environment:
         - OCPN_TARGET=buster-armhf
-        - DOCKER_IMAGE=jongough/raspbian-buster:plugin_build_tooling_current
+        - DOCKER_IMAGE=balenalib/raspberry-pi-debian:buster
         - BUILD_FLAGS=-j3
         - BUILD_ENV=raspbian
         steps:
@@ -91,10 +94,10 @@ jobs:
             steps:
             - run: ci/cloudsmith-upload.sh
     build-armhf-bionic-64:
-        machine: true
+        machine:
+            image: ubuntu-1604:202010-01
         environment:
-        - OCPN_TARGET=bionic-arm64
-        - OCPN_BRANCH=master
+        - OCPN_TARGET=bionic-armh64
         - DOCKER_IMAGE=arm64v8/ubuntu:18.04
         - BUILD_FLAGS=-j3
         - BUILD_ENV=ubuntu
@@ -113,6 +116,7 @@ jobs:
         - image: circleci/buildpack-deps:trusty-scm
         environment:
         - OCPN_TARGET:  trusty
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -127,12 +131,15 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-xenial:
         docker:
         - image: circleci/buildpack-deps:xenial-scm
         environment:
         - OCPN_TARGET:  xenial
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -147,12 +154,15 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-bionic:
         docker:
-        - image: circleci/buildpack-deps:bionic-scm
+        - image: circleci/buildpack-deps:bionic-scm@sha256:3d8e5303b6984bfae23f8fce2b827888fb1d16c10e2c61635eaae4fb9b7f284a
         environment:
         - OCPN_TARGET:  bionic
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -167,13 +177,16 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-bionic-gtk3:
         docker:
-        - image: circleci/buildpack-deps:bionic-scm
+        - image: circleci/buildpack-deps:bionic-scm@sha256:3d8e5303b6984bfae23f8fce2b827888fb1d16c10e2c61635eaae4fb9b7f284a
         environment:
         - BUILD_GTK3: true
         - OCPN_TARGET:  bionic-gtk3
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -188,12 +201,15 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-focal:
         docker:
         - image: circleci/buildpack-deps:focal-scm
         environment:
         - OCPN_TARGET:  focal
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -208,6 +224,8 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-focal-gtk3:
         docker:
@@ -215,6 +233,7 @@ jobs:
         environment:
         - BUILD_GTK3: true
         - OCPN_TARGET: focal-gtk3
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -229,12 +248,15 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-buster:
         docker:
         - image: circleci/buildpack-deps:buster-scm
         environment:
         - OCPN_TARGET:  buster
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: >
@@ -249,6 +271,8 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-flatpak:
         machine:
@@ -269,6 +293,7 @@ jobs:
         - image: fedora:33
         environment:
         - OCPN_TARGET:  fedora
+        - DEPLOY_USE_ORB: true
         steps:
         - run: su -c "dnf install -q -y git openssh-clients openssh-server"
         - checkout
@@ -277,6 +302,8 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-mingw:
         docker:
@@ -299,6 +326,7 @@ jobs:
         environment:
         - OCPN_TARGET:  macos
         - CLOUDSMITH_PKG_EXT: pkg
+        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: chmod a+x ci/*.sh
@@ -306,9 +334,12 @@ jobs:
         - when:
             condition: <<pipeline.parameters.run_workflow_deploy>>
             steps:
+            - cloudsmith/ensure-api-key
+            - cloudsmith/install-cli
             - run: ci/cloudsmith-upload.sh
     build-android-arm64:
         docker:
+        #- image: circleci/android:api-28-ndk@sha256:5eda43632ee1accf6e3cf2c3980ce68e579552a8c90d8e1f6753c3862541f04e
         - image: circleci/android:api-28-ndk
         environment:
         - OCPN_TARGET:  android-arm64
@@ -322,6 +353,7 @@ jobs:
             - run: ci/cloudsmith-upload.sh
     build-android-armhf:
         docker:
+        #- image: circleci/android:api-28-ndk@sha256:5eda43632ee1accf6e3cf2c3980ce68e579552a8c90d8e1f6753c3862541f04e
         - image: circleci/android:api-28-ndk
         environment:
         - OCPN_TARGET:  android-armhf
@@ -356,18 +388,17 @@ workflows:
                     - tmp
                 tags:
                     only: /.*/
-# Currently circleci does not build armf64 correctly due to no suitable docker image
-#        build_3:
-#        when: <<pipeline.parameters.run_build_bionic-64>>
-#        jobs:
-#        - build-armhf-bionic-64:
-#            filters:
-#                branches:
-#                    ignore:
-#                    - devel
-#                    - tmp
-#                tags:
-#                    only: /.*/
+    build_3:
+        when: <<pipeline.parameters.run_build_armhf_bionic_64>>
+        jobs:
+        - build-armhf-bionic-64:
+            filters:
+                branches:
+                    ignore:
+                    - devel
+                    - tmp
+                tags:
+                    only: /.*/
     build_4:
         when: <<pipeline.parameters.run_build_trusty>>
         jobs:
