--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-## ---------------------------------------------------------------------------
+##---------------------------------------------------------------------------
 ## Author:      Sean d'Epagnier
-## ***************************************************************************
+##***************************************************************************
 ## *   Copyright (C) 2010 by Sean d'Epagnier                              *
 ## *   License:     GPLv3+
 ## *   This program is free software; you can redistribute it and/or modify  *
 ## *   it under the terms of the GNU General Public License as published by  *
-## *   the Free Software Foundation; either version 3 of the License, or     *
+## *   the Free Software Foundation; either version 2 of the License, or     *
 ## *   (at your option) any later version.                                   *
 ## *                                                                         *
 ## *   This program is distributed in the hope that it will be useful,       *
@@ -15,18 +15,18 @@
 ## *                                                                         *
 ## *   You should have received a copy of the GNU General Public License     *
 ## *   along with this program; if not, write to the                         *
-## *   Free Software Foundation, Inc.,                                       *
-## *   51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,  USA.         *
-## ---------------------------------------------------------------------------
-## Frontend2 Author: Jon Gough   v1.0.253.0 07/08/2023 # DD/MM/YYYY format
-## ---------------------------------------------------------------------------
-## ----- When changing this file do NOT change the order in which sections occur   ----- ##
-## ----- Changes should only be made between the section blocks that identify where ---- ##
-## ----- these changes should be. The whole configuration process relies on this   ----- ##
-## ----- sequence to be successful                                                 ----- ##
-
-
-## ----- Modify section below to include all the details for your plugin ----- ##
+## *   xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx,                                       *
+## *   xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx                                       *
+#-----------------------------------------------------------------------------
+# Frontend2 Author: Jon Gough 
+# Testplugn(TP) v1.0.254.0 09/09/2023 DD/MM/YYYY format
+# buildCI:yes useODAPI:no validateJSON:no
+# ---------------------------------------------------------------------------
+## -- When changing this file do NOT change the order of the sections.    -- ##
+## -- Make changes only between the section blocks identified             -- ##
+## -- The whole configuration process relies on this sequence for success.-- ##
+##
+## -- Modify section below to include all the details for your plugin.    -- ##
 
 set(CMLOC "CMakeLists: ")
 
@@ -46,7 +46,7 @@ endif(COMMAND cmake_policy)
 
 # define plugin name, owner and versions
 set(VERBOSE_NAME Climatology)
-set(COMMON_NAME "Climatology")
+set(COMMON_NAME "Climatology")    # Search "getcommonname"in climatology_pi.
 set(TITLE_NAME "climatology")
 set(PACKAGE_CONTACT "Sean D'Epagnier")
 set(PACKAGE "climatology")
@@ -54,24 +54,20 @@ set(SHORT_DESCRIPTION "Climatology PlugIn: 32 years of monthly NOAA Data")
 set(LONG_DESCRIPTION "Climatology provides overlay capabilities for historic weather data. Supported Climatology types include: - Average wind directions and speed- Percentage of gale and calm conditions - Sea Surface Currents - Average swell and sea state (not yet implemented) - Precipitation, Humidity, Cloud Cover, and Lightning Strikes - Monthly average Sea Level pressure and Sea Temperature, Air Temperature - Tropical Cyclone tracks")
 
 set(VERSION_MAJOR "1")
-set(VERSION_MINOR "5")
-set(VERSION_PATCH "7")
+set(VERSION_MINOR "6")
+set(VERSION_PATCH "0")
 set(VERSION_TWEAK "0")
-set(VERSION_DATE "08/08/2023") # DD/MM/YYYY format
+set(VERSION_DATE  "07/09/2023")#DD/MM/YYYY format
 set(OCPN_MIN_VERSION "ov58")
 set(OCPN_API_VERSION_MAJOR "1")
 set(OCPN_API_VERSION_MINOR "16")
-set(TP_COMMENT "")
+set(TP_COMMENT "  * Release for O571 or o58 using CI")
 
 set(PARENT "opencpn")
 
-#Used to set up a local webserver with git loaded, for testing purposes.
-#Now set in plugin configure, needed to build flatpak, also locally.
+#Use to set up a local webserver with git installed.
+#Default is github.com. Now set in pluginconfigure.cmake
 #set(GIT_REPOSITORY_SERVER "github.com")
-
-#No longer needed, queried.
-# set(GIT_USER "rgleason")
-# set(GIT_REPOSITORY_NAME "climatology_pi")
 
 ## Specifies Cloudsmith upload repository suffix for each catalog
 set(PROD "prod")   #Standard Repos
@@ -80,10 +76,12 @@ set(ALPHA "alpha") #Standard Repos
 
 # Set if  Cloudsmith Base Repository name does not match your Git Repository name.
 # set(CLOUDSMITH_BASE_REPOSITORY "${GIT_REPOSITORY_NAME}")
+#set(CLOUDSMITH_BASE_REPOSITORY "opencpn-plugins")  #Ricks's customization
 set(CLOUDSMITH_BASE_REPOSITORY "climatology")  #without the _pi
 
-#set(CLOUDSMITH_USER "rick-gleason")
+# Set the following to use OpenCPN cloudsmith repositories instead of own repositories
 set(CLOUDSMITH_USER "opencpn")
+#set(CLOUDSMITH_USER "rick-gleason")
 
 set(XML_INFO_URL "https://opencpn.org/OpenCPN/plugins/climatology.html")
 set(XML_SUMMARY ${SHORT_DESCRIPTION})
@@ -100,7 +98,7 @@ set(CMAKE_CXX_STANDARD 11)
 # requires libs/glu directory
 set(USE_LOCAL_GLU TRUE)
 # Prefer libGL.so to libOpenGL.so, see CMP0072
-# set(OpenGL_GL_PREFERENCE "LEGACY")
+set(OpenGL_GL_PREFERENCE "LEGACY")   #not operational
 
 option(USE_GL "Enable OpenGL support" ON)
 message(STATUS "${CMLOC}USE_GL: ${USE_GL}")
@@ -111,19 +109,16 @@ endif("${CMAKE_BUILD_TYPE}" STREQUAL "")
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "" "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
 message(STATUS "${CMLOC}Build type: ${CMAKE_BUILD_TYPE}")
 
-## ----- The statements below are used to setup standard variables that are required by the CMAKE process - do not remove ----- ##
+## ----- Statements below used to setup standard variables required by the CMAKE process -- Do not remove - ##
 
 project(${PACKAGE})
+
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-# =======================================================
+#========================================================
 include("PluginSetup")
-# =======================================================
-##
-## ----- The above is used to setup standard variables that are required by the CMAKE process - do not remove ----- ##
-##
-
-##
+#========================================================
+## ----- Above used to setup standard variables required by CMAKE process - Do not remove ----- ##
 ## ----- Modify section below if there are special requirements for the plugin ----- ##
 ##
 
@@ -133,23 +128,15 @@ option(Plugin_CXX11 "Use c++11" OFF)
 
 ## ----- Modify section above if there are special requirements for the plugin ----- ##
 ## ----- do not change next section - needed to configure build process ----- ##
-
-# ========================================================
+#===========================================================
 include("PluginConfigure")
-# ========================================================
-##
+#===========================================================
 ## ----- do not change section above - needed to configure build process ----- ##
-##
-
-#
-# ----- Change below to match project requirements for source, headers, etc. ----- ##
-#
+## ----- Change below to match project requirements for source, headers, etc. ----- ##
 
 add_definitions(-DUSE_S57)
 
-
-#======== Below from cmakelists.txt  climatology_pi
-# ----Remember to Add your project Set(SRCS and set(HDRS  etc..
+## ---- Section Below - Add your project SET(SRCS and SET(HDRS  etc..
 
 SET(SRCS
             src/ClimatologyOverlayFactory.cpp
@@ -176,37 +163,11 @@ SET(HDRS
 			include/zuFile.h
 )
 
-# was off
-# set(OCPNSRC
-#    ocpnsrc/cutil.cpp
-#    ocpnsrc/TexFont.cpp
-#)
+set(LIBSSRC 
+    libs/wxJSON/src/jsonreader.cpp
+    libs/wxJSON/src/jsonval.cpp
+    libs/wxJSON/src/jsonwriter.cpp)
 
-# was off
-#set(OCPNHDRS
-#    ocpninclude/cutil.h
-#    ocpninclude/ocpn_plugin.h
-#    ocpninclude/pluginmanager.h
-#    ocpninclude/shaders.h
-#    ocpninclude/TexFont.h
-#    ocpninclude/vector2D.h
-#    libs/ocpn-api/ocpn_plugin.h
-#)
-
-# was off  folder does not exist here
-#set(EXTSRC
-#)
-
-# was off
-# set(EXTINCLUDE
-#    extinclude/ODAPI.h
-#    extinclude/ODJSONSchemas.h
-#)
-
-# was off
-set(LIBSSRC libs/wxJSON/src/jsonreader.cpp libs/wxJSON/src/jsonval.cpp libs/wxJSON/src/jsonwriter.cpp)
-
-# was off
 set(LIBHDRS
     libs/GL/gl.h
     libs/GL/gl_private.h
@@ -219,49 +180,42 @@ set(LIBHDRS
 
 add_definitions(-DPLUGIN_USE_SVG)
 
-set(EXTINCLUDE_DIR ${EXTINCLUDE_DIR} extinclude libs/ocpn-api/)
+## ----- Section above - Add your project SET(SRCS and SET(HDRS  etc..
+## ----- If using JSON validation in plugin section below is needed ----- ##
 
-#
-# ----- If using JSON validation in plugin section below is needed ----- ##
-#
+# Do not need Json Schema Validation
 
-# Not doing JSON Schema Validator
+## ----- If using JSON validation in plugin section above is needed ----- ##
 
 
-#
-# ----- If using JSON validation in plugin section above is needed ----- ##
-#
+##================================================================================
+## Change as required to collect all the set( headers and SRCS
+## This add_library  can be used in conditionals below.
+##================================================================================
+
+SET(SRC ${SRCS} ${HDRS} ${LIBSSRC} )
 
 ##=============================================================
-# Modify/configure 'Include' Directories below for the Plugin
+## Modify/configure 'Include' Directories below for the Plugin
 ##=============================================================
 
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include)
-# was off
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/ocpninclude)
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/${EXTINCLUDE_DIR})
+# not used
+# not used
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/GL)
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/plugingl)
+include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/glu/include)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/ocpn-api)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/wxJSON/include)
 
-
-#
-# ----- Change below to match project requirements for android build ----- ##
-#
-
-if(QT_ANDROID)
-    include_directories( ${PROJECT_SOURCE_DIR}/extinclude/GLES2)
-endif(QT_ANDROID)
-
-##
-## ----- Change above to match project requirements for android build ----- ##
-##
+#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/jsoncpp)
+# not used
+include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/pluginDC/include)
 
 
+## Change target_sources to match your project needs.
 ##=================================================
-target_sources(${PACKAGE_NAME} PUBLIC ${SRCS} ${HDRS} ${LIBSSRC})
+target_sources(${PACKAGE_NAME} PUBLIC ${SRC} )
 ##=================================================
 
 if(NOT OCPN_FLATPAK_CONFIG)
@@ -269,24 +223,32 @@ if(NOT OCPN_FLATPAK_CONFIG)
     message(STATUS "${CMLOC}Adding target link libraries to ${PACKAGE_NAME}")
 
     add_subdirectory(libs/tinyxml)
+    add_subdirectory(libs/pluginDC)
 
     target_link_libraries(${PACKAGE_NAME} ocpn::tinyxml)
+    target_link_libraries(${PACKAGE_NAME} ocpn::pluginDC)
 endif(NOT OCPN_FLATPAK_CONFIG)
 
 add_definitions(-DTIXML_USE_STL)
 
-#
-# ----- If using JSON validation in plugin section below is needed ----- ##
-#
+##
+## ----- If using JSON validation section below is needed ----- ##
+##
 
-# Not doing JSON Schema Validation
+# Do not need Json Schema Validation
 
-#
-# ----- If using JSON validation in plugin section above is needed ----- ##
-#
+##
+## ----- Do not change next section - needed to configure build process ----- ##
+##
+##------- Change below to match project requirements --------------
+
+# Needed for android builds
+if(QT_ANDROID)
+    include_directories(BEFORE ${qt_android_include})
+endif(QT_ANDROID)
 
 IF(NOT UNIX)
-    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include/zlib-1.2.3)
+    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/zlib-1.2.3)
     include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/bzip2)
     add_subdirectory(${PROJECT_SOURCE_DIR}/libs/bzip2)
     target_link_libraries(${PACKAGE_NAME} ocpn::bzip2)
@@ -303,32 +265,23 @@ IF(WIN32)
   ENDIF()
 ENDIF(WIN32)
 
-## ----- Change above to match project requirements ----- ##
-
-##------- Change below to match project requirements --------------
-
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/jsoncpp)
 add_subdirectory(libs/jsoncpp)
 target_link_libraries(${PACKAGE_NAME} ocpn::jsoncpp)
 
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/plugingl/include)
-add_subdirectory(libs/plugingl)
-target_link_libraries(${PACKAGE_NAME} ocpn::plugingl)
+#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/pluginDC/include)
+#add_subdirectory(libs/pluginDC)
+#target_link_libraries(${PACKAGE_NAME} ocpn::pluginDC)
 
 ## ----- Change above to match project requirements ----- ##
-## ----- do not change next section - needed to configure build process ----- ##
-
-
-
+## Needed for all builds Do not change - needed to build app --- ##
 #========================================================
-# Needed for all builds
 include("PluginInstall")
 include("PluginLocalization")
 include("PluginPackage")
-# ========================================================
+#========================================================
+## ----- Do not change section above - needed to configure build process ----- ##
 
-## ----- do not change section above - needed to configure build process ----- ##
-##
 message(STATUS "${CMLOC}include directories: ")
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
 foreach(dir ${dirs})
